--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="products.js"></script>
     <script src="pages.js"></script>
     <script src="router.js"></script>
+    <script src="contact.js"></script>
     <script>
         // Inicializa la página en "home"
         router.navigate('home');
