--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="navbar">
         <a href="#" onclick="router.navigate('home')">Inicio</a>
         <a href="#" onclick="router.navigate('catalog')">Catálogo</a>
+        <a href="#" onclick="router.navigate('contact')">Contacto</a>
     </div>
     <div id="content"></div>
     <script src="products.js"></script>
